[gd_scene load_steps=7 format=2]

[ext_resource path="res://GUIManager.gd" type="Script" id=1]
[ext_resource path="res://gui/ProgressBarFG.tres" type="StyleBox" id=2]
[ext_resource path="res://gui/ProgressBarBG.tres" type="StyleBox" id=3]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://gui/FairfaxHD.ttf"

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
Panel/styles/panel = null
Panel/styles/panelf = null
Panel/styles/panelnc = null
ProgressBar/colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = null
ProgressBar/styles/fg = null

[node name="GUI" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme = SubResource( 3 )

[node name="BarsAlphaTween" type="Tween" parent="CanvasLayer/HUD"]

[node name="HopeTween" type="Tween" parent="CanvasLayer/HUD"]

[node name="BreathTween" type="Tween" parent="CanvasLayer/HUD"]

[node name="DialogueTween" type="Tween" parent="CanvasLayer/HUD"]

[node name="DialogueAlphaTween" type="Tween" parent="CanvasLayer/HUD"]

[node name="Bars" type="VBoxContainer" parent="CanvasLayer/HUD"]
margin_right = 984.0
margin_bottom = 82.0
custom_constants/separation = 10

[node name="HopeBar" type="HBoxContainer" parent="CanvasLayer/HUD/Bars"]
margin_right = 984.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="CanvasLayer/HUD/Bars/HopeBar"]
margin_right = 36.0
margin_bottom = 36.0
text = "HP"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/HUD/Bars/HopeBar"]
margin_left = 40.0
margin_right = 340.0
margin_bottom = 36.0
rect_min_size = Vector2( 300, 36 )
custom_styles/fg = ExtResource( 2 )
custom_styles/bg = ExtResource( 3 )
max_value = 10.0
value = 10.0
percent_visible = false

[node name="BreathBar" type="HBoxContainer" parent="CanvasLayer/HUD/Bars"]
margin_top = 46.0
margin_right = 984.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="CanvasLayer/HUD/Bars/BreathBar"]
margin_right = 36.0
margin_bottom = 36.0
text = "BH"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/HUD/Bars/BreathBar"]
margin_left = 40.0
margin_right = 340.0
margin_bottom = 36.0
rect_min_size = Vector2( 300, 36 )
custom_styles/fg = ExtResource( 2 )
custom_styles/bg = ExtResource( 3 )
max_value = 10.0
value = 10.0
percent_visible = false

[node name="Separator" type="Control" parent="CanvasLayer/HUD"]
margin_top = 86.0
margin_right = 984.0
margin_bottom = 406.0
rect_min_size = Vector2( 0, 320 )

[node name="DialogueBoxes" type="HBoxContainer" parent="CanvasLayer/HUD"]
margin_top = 410.0
margin_right = 984.0
margin_bottom = 560.0
rect_min_size = Vector2( 984, 150 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 15

[node name="A" type="Panel" parent="CanvasLayer/HUD/DialogueBoxes"]
margin_right = 484.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/HUD/DialogueBoxes/A"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 514.385
margin_top = 15.0
margin_right = 484.385
margin_bottom = -15.0

[node name="B" type="Panel" parent="CanvasLayer/HUD/DialogueBoxes"]
margin_left = 499.0
margin_right = 984.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/HUD/DialogueBoxes/B"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.3846
margin_top = 15.0
margin_right = -14.6154
margin_bottom = -15.0
[connection signal="tween_completed" from="CanvasLayer/HUD/DialogueTween" to="." method="_on_DialogueTween_tween_completed"]
[connection signal="tween_completed" from="CanvasLayer/HUD/DialogueAlphaTween" to="." method="_on_DialogueAlphaTween_tween_completed"]
